--- a/inSooqApp/Controllers/Forms/Elements/SimView/SimView.xib
+++ b/inSooqApp/Controllers/Forms/Elements/SimView/SimView.xib
@@ -11,54 +11,39 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SimView" customModule="inSooqApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
+            <rect key="frame" x="0.0" y="0.0" width="479" height="200"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ixq-bu-JOc" customClass="FormPreviewView" customModule="inSooqApp" customModuleProvider="target">
-                    <rect key="frame" x="4" y="4" width="406" height="142"/>
-                    <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="etisalat" translatesAutoresizingMaskIntoConstraints="NO" id="XFH-wW-PCc">
-                            <rect key="frame" x="0.0" y="0.0" width="406" height="142"/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                    <integer key="value" value="4"/>
-                                </userDefinedRuntimeAttribute>
-                            </userDefinedRuntimeAttributes>
-                        </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000000000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L3T-6i-nvb">
-                            <rect key="frame" x="81" y="49" width="203" height="37"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="31"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="etisalat" translatesAutoresizingMaskIntoConstraints="NO" id="XFH-wW-PCc">
+                    <rect key="frame" x="0.0" y="0.0" width="479" height="200"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="XFH-wW-PCc" firstAttribute="top" secondItem="Ixq-bu-JOc" secondAttribute="top" id="0Lj-rN-xVz"/>
-                        <constraint firstAttribute="height" constant="142" id="7Cj-81-kff"/>
-                        <constraint firstItem="XFH-wW-PCc" firstAttribute="leading" secondItem="Ixq-bu-JOc" secondAttribute="leading" id="ACV-G7-Q78"/>
-                        <constraint firstAttribute="trailing" secondItem="XFH-wW-PCc" secondAttribute="trailing" id="OL4-aK-1uY"/>
-                        <constraint firstItem="L3T-6i-nvb" firstAttribute="centerX" secondItem="XFH-wW-PCc" secondAttribute="centerX" multiplier="0.9" id="eiR-fl-BxJ"/>
-                        <constraint firstAttribute="bottom" secondItem="XFH-wW-PCc" secondAttribute="bottom" id="fyY-EY-0WA"/>
-                        <constraint firstItem="L3T-6i-nvb" firstAttribute="centerY" secondItem="XFH-wW-PCc" secondAttribute="centerY" multiplier="0.95" id="i2i-U5-QCA"/>
-                        <constraint firstItem="L3T-6i-nvb" firstAttribute="width" secondItem="XFH-wW-PCc" secondAttribute="width" multiplier="0.5" id="poh-Tl-Ium"/>
+                        <constraint firstAttribute="height" constant="200" id="HIn-NG-WoP"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                             <integer key="value" value="4"/>
                         </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.clipsToBounds" value="YES"/>
                     </userDefinedRuntimeAttributes>
-                </view>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000000000" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L3T-6i-nvb">
+                    <rect key="frame" x="86" y="50" width="230" height="80"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Ixq-bu-JOc" secondAttribute="trailing" constant="4" id="MN1-rT-162"/>
-                <constraint firstItem="Ixq-bu-JOc" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="4" id="gZh-SC-x93"/>
-                <constraint firstItem="Ixq-bu-JOc" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="4" id="jyq-KY-clB"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Ixq-bu-JOc" secondAttribute="bottom" constant="4" id="lpa-Df-faz"/>
+                <constraint firstItem="L3T-6i-nvb" firstAttribute="centerY" secondItem="XFH-wW-PCc" secondAttribute="centerY" multiplier="0.9" id="0Ny-N5-4xY"/>
+                <constraint firstItem="L3T-6i-nvb" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.48" id="6hN-My-HKr"/>
+                <constraint firstItem="XFH-wW-PCc" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="9KX-Y0-kZz"/>
+                <constraint firstItem="L3T-6i-nvb" firstAttribute="centerX" secondItem="XFH-wW-PCc" secondAttribute="centerX" multiplier="0.84" id="dKg-bJ-LJh"/>
+                <constraint firstItem="XFH-wW-PCc" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="dmF-fe-xwg"/>
+                <constraint firstAttribute="bottom" secondItem="XFH-wW-PCc" secondAttribute="bottom" id="jGh-yt-4Nr"/>
+                <constraint firstItem="L3T-6i-nvb" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.4" id="vao-dK-MlE"/>
+                <constraint firstItem="XFH-wW-PCc" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="yf0-rq-zLw"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
@@ -67,7 +52,7 @@
                 <outlet property="adImage" destination="XFH-wW-PCc" id="rL8-2Q-Lza"/>
                 <outlet property="numberLabel" destination="L3T-6i-nvb" id="7u4-AS-hyX"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="122.54464285714285"/>
+            <point key="canvasLocation" x="184.78260869565219" y="136.60714285714286"/>
         </view>
     </objects>
     <resources>
