--- a/inSooqApp/Controllers/Forms/Elements/PlateView/PlateView.xib
+++ b/inSooqApp/Controllers/Forms/Elements/PlateView/PlateView.xib
@@ -7,97 +7,32 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="BebasKai.ttf">
-            <string>BebasKai</string>
-        </array>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PlateView" customModule="inSooqApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="432"/>
+            <rect key="frame" x="0.0" y="0.0" width="600" height="200"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ixq-bu-JOc" customClass="FormPreviewView" customModule="inSooqApp" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="44" width="600" height="354"/>
-                    <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="117" translatesAutoresizingMaskIntoConstraints="NO" id="XFH-wW-PCc">
-                            <rect key="frame" x="8" y="0.0" width="584" height="177"/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                    <integer key="value" value="4"/>
-                                </userDefinedRuntimeAttribute>
-                            </userDefinedRuntimeAttributes>
-                        </imageView>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="131" translatesAutoresizingMaskIntoConstraints="NO" id="MDn-D2-vxZ">
-                            <rect key="frame" x="8" y="177" width="584" height="177"/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                    <integer key="value" value="4"/>
-                                </userDefinedRuntimeAttribute>
-                            </userDefinedRuntimeAttributes>
-                        </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PcR-dR-O8c">
-                            <rect key="frame" x="168" y="72.5" width="156.5" height="72"/>
-                            <fontDescription key="fontDescription" name="BebasKai" family="Bebas Kai" pointSize="60"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sok-ll-OsU">
-                            <rect key="frame" x="268" y="229.5" width="104.5" height="72"/>
-                            <fontDescription key="fontDescription" name="BebasKai" family="Bebas Kai" pointSize="60"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstItem="Sok-ll-OsU" firstAttribute="centerY" secondItem="MDn-D2-vxZ" secondAttribute="centerY" id="3gF-eb-y0c"/>
-                        <constraint firstItem="XFH-wW-PCc" firstAttribute="centerX" secondItem="Ixq-bu-JOc" secondAttribute="centerX" id="Cfv-8B-zzf"/>
-                        <constraint firstItem="XFH-wW-PCc" firstAttribute="top" secondItem="Ixq-bu-JOc" secondAttribute="top" id="IVD-Oc-ax6"/>
-                        <constraint firstItem="MDn-D2-vxZ" firstAttribute="centerX" secondItem="Ixq-bu-JOc" secondAttribute="centerX" id="NcY-oe-M02"/>
-                        <constraint firstItem="PcR-dR-O8c" firstAttribute="centerY" secondItem="XFH-wW-PCc" secondAttribute="centerY" constant="20" id="ONX-tB-sMq"/>
-                        <constraint firstItem="MDn-D2-vxZ" firstAttribute="height" secondItem="Ixq-bu-JOc" secondAttribute="height" multiplier="0.5" id="ar0-D5-fSe"/>
-                        <constraint firstItem="Sok-ll-OsU" firstAttribute="centerX" secondItem="MDn-D2-vxZ" secondAttribute="centerX" constant="20" id="cxB-U6-VHB"/>
-                        <constraint firstAttribute="bottom" secondItem="MDn-D2-vxZ" secondAttribute="bottom" id="d7S-mT-eRF"/>
-                        <constraint firstItem="XFH-wW-PCc" firstAttribute="height" secondItem="Ixq-bu-JOc" secondAttribute="height" multiplier="0.5" id="gRP-Xs-CwE"/>
-                        <constraint firstItem="MDn-D2-vxZ" firstAttribute="width" secondItem="Ixq-bu-JOc" secondAttribute="width" constant="-16" id="n09-mk-fkI"/>
-                        <constraint firstItem="XFH-wW-PCc" firstAttribute="width" secondItem="Ixq-bu-JOc" secondAttribute="width" constant="-16" id="pMK-2x-k3I"/>
-                        <constraint firstItem="PcR-dR-O8c" firstAttribute="centerX" secondItem="XFH-wW-PCc" secondAttribute="centerX" multiplier="0.82" id="x7p-sy-cZm"/>
-                    </constraints>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                            <integer key="value" value="4"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.clipsToBounds" value="YES"/>
-                    </userDefinedRuntimeAttributes>
-                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PLATE PREVIEW" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RlO-k2-g6Q">
+                    <rect key="frame" x="0.0" y="44" width="600" height="122"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Ixq-bu-JOc" secondAttribute="bottom" id="GbC-mw-jKP"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Ixq-bu-JOc" secondAttribute="trailing" id="Kgp-7v-v9b"/>
-                <constraint firstItem="Ixq-bu-JOc" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Lx9-RW-TBo"/>
-                <constraint firstItem="Ixq-bu-JOc" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="naz-6P-5Wv"/>
+                <constraint firstItem="RlO-k2-g6Q" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="jmm-dv-Zy3"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="RlO-k2-g6Q" secondAttribute="trailing" id="m3N-ZI-0GP"/>
+                <constraint firstItem="RlO-k2-g6Q" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="rcP-vU-JQw"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="RlO-k2-g6Q" secondAttribute="bottom" id="yEh-oB-kRG"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <connections>
-                <outlet property="lowerImageView" destination="MDn-D2-vxZ" id="lQy-Xr-6XT"/>
-                <outlet property="lowerNumber" destination="Sok-ll-OsU" id="jGC-21-d18"/>
-                <outlet property="upperImageView" destination="XFH-wW-PCc" id="dsx-h4-9Dm"/>
-                <outlet property="upperNumber" destination="PcR-dR-O8c" id="aMT-30-9rU"/>
-            </connections>
-            <point key="canvasLocation" x="428.98550724637687" y="233.03571428571428"/>
+            <point key="canvasLocation" x="428.98550724637687" y="155.35714285714286"/>
         </view>
     </objects>
-    <resources>
-        <image name="117" width="1821" height="1000"/>
-        <image name="131" width="2000" height="500"/>
-    </resources>
 </document>
